# holographic-memory

./: .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bench_local_16384_1024.json  bench_local_16384_256.json  bench_local_16384_4096.json  bench_local_32768_1024.json  bench_local_32768_256.json  bench_local_65536_256.json  bench_local_65536_4096.json  bench_suite_full_16384.json  benchmark-results-full.json  benchmark-results.json  benchmark_results_full.json  benchmark_scaling_results.json  benchmark_scaling_results_coarse.json  build.rs  deny.toml  index.d.ts  modal_benchmark.py  package.json  project.yaml  pyproject.toml  research_bench_16384_256.json
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/badges/: coverage.json
.github/workflows/: changelog.yml  ci.yml  coverage.yml  dependency-review.yml  publish-crate.yml  publish-pypi.yml  publish.yml  scorecard.yml
benches/: hms_benchmark.rs
benchmarks/: hms_bench.py
benchmarks/data/scaling_test/: meta.redb
bindings/bindings/: ConceptCandidate.ts  GraphPath.ts  HmsError.ts  MemorizeBatchItem.ts  PathHop.ts  Relation.ts  RelationType.ts  RetrievalResult.ts  TextMetrics.ts
conductor/: debate.sh  debate_phase1.sh  final_prompt.md  launch_phase1.sh  plan.md  run_debate.sh  run_debate_p2.sh
conductor/debate_output/: full_conversation.json  full_transcript.txt  r1_Claude-Opus-4.8.txt  r1_DeepSeek-V4-Pro.txt  r1_Qwen-3.7-Max.txt  r2_Claude-Opus-4.8.txt  r2_DeepSeek-V4-Pro.txt  r2_MiMo-V2.5-Pro.txt  r2_MiniMax-M3.txt  r2_Qwen-3.7-Max.txt  r3_Claude-Opus-4.8.txt  r3_DeepSeek-V4-Pro.txt  r3_MiniMax-M3.txt  r3_Qwen-3.7-Max.txt  r3_Step-3.7-Flash.txt  r4_Claude-Opus-4.8.txt  r4_DeepSeek-V4-Pro.txt  r4_Qwen-3.7-Max.txt  r4_Step-3.7-Flash.txt  r5_Claude-Opus-4.8.txt  r5_DeepSeek-V4-Pro.txt  r5_MiMo-V2.5-Pro.txt  r5_MiniMax-M3.txt  r5_Qwen-3.7-Max.txt  r5_Step-3.7-Flash.txt  vote_Claude-Opus-4.8.txt  vote_DeepSeek-V4-Pro.txt  vote_MiMo-V2.5-Pro.txt  vote_MiniMax-M3.txt  vote_Qwen-3.7-Max.txt  vote_Step-3.7-Flash.txt
conductor/debate_phase1/A/: conversation.json  transcript.txt
conductor/debate_phase1/B/: conversation.json  transcript.txt
conductor/debate_phase1/C/: conversation.json  transcript.txt
conductor/debate_phase1/D/: conversation.json  transcript.txt
conductor/debate_phase1/E/: conversation.json  transcript.txt
conductor/debate_phase2/A/: conversation.json  transcript.txt
conductor/debate_phase2/B/: conversation.json  transcript.txt
conductor/debate_phase2/C/: conversation.json  transcript.txt
conductor/debate_phase2/D/: conversation.json  transcript.txt
conductor/debate_phase2/E/: conversation.json  transcript.txt
conductor/prompts/A/: r1.txt  r2.txt  r3.txt  system.txt
conductor/prompts/B/: r1.txt  r2.txt  r3.txt  system.txt
conductor/prompts/C/: r1.txt  r2.txt  r3.txt  system.txt
conductor/prompts/D/: r1.txt  r2.txt  r3.txt  system.txt
conductor/prompts/E/: r1.txt  r2.txt  r3.txt  system.txt
conductor/prompts_p2/A/: r4.txt  r5.txt  r6.txt  system.txt
conductor/prompts_p2/B/: r4.txt  r5.txt  r6.txt  system.txt
conductor/prompts_p2/C/: r4.txt  r5.txt  system.txt
conductor/prompts_p2/D/: r4.txt  r5.txt  r6.txt  system.txt
conductor/prompts_p2/E/: r4.txt  r5.txt  system.txt
docs/: ARCHITECTURE.md  CAPACITY-CAMPAIGN-LOG.md  COMPARISON.md  DETERMINISTIC-RESONATOR.md  INTEGRATION.md  OVERNIGHT-LOG.md  PREREGISTRATION-binding-readout.md  PRIVACY.md  RESEARCH.md  SECURITY.md  SUPERPOSITION-FLOOR.md
examples/: story_memory.rs  verify_cogmem_sample.rs
examples/fixtures/: cogmem.memory.provenance.cose  crosstalk.orchestration.audit.cose
notebooks/: codebook_benchmark.ipynb  pyproject.toml  stress_test_results.json
schemas/: ConceptCandidate.json  HmsError.json  MemorizeBatchItem.json  RetrievalResult.json  TextMetrics.json
scripts/: plot_benchmarks.py  superposition_floor.py  superposition_floor_coded.py  superposition_floor_priors.py  superposition_floor_probes.py  superposition_floor_robust.py
src/: lib.rs  lib_proptest.rs  python.rs
src/core/: admission.rs  algebra.rs  atom_memory.rs  audit.rs  block_codes.rs  bloom_memory.rs  clifford.rs  cls_memory.rs  compose.rs  composite_memory.rs  config.rs  connection_graph.rs  counting_bloom_memory.rs  decompose.rs  diffusion.rs  encoding.rs  entangled.rs  error.rs  graph.rs  hopfield.rs  idf.rs  indexed_memory.rs  intersection.rs  mod.rs  phase_graph.rs  phase_hvec.rs  phase_resonator.rs  posting.rs  resonator.rs  role.rs  rules.rs  security.rs  shard.rs  sparse_autoencoder.rs  storage.rs  ternary.rs  text.rs  tombstone.rs  triple_store.rs  types.rs  (+1 more)
src/core/agency/: goals.rs  mod.rs  planner.rs  questions.rs  self_modify.rs
src/core/cognition/: abstraction.rs  analogy.rs  gaps.rs  governor.rs  hypothesis.rs  loop.rs  mod.rs  patterns.rs  refiner.rs
src/core/engine/: concepts.rs  knowledge.rs  maintenance.rs  mod.rs  multi_hop.rs  query.rs  router.rs  shard.rs  structural.rs
src/core/index/: inverted.rs  mod.rs
src/core/ivf/: inverted_list.rs  kmeans.rs  mod.rs  nystrom.rs  pq.rs  query.rs  training.rs
src/core/nsg/: graph.rs  mod.rs  search.rs  training.rs
src/core/provenance/: c2pa_manifest.rs  cawg.rs  cose.rs  did.rs  jumbf.rs  keri.rs  mod.rs  scitt.rs  sigstore.rs  trust.rs  types.rs  vc.rs
