[package]
name = "hms-native"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["David Condrey"]
description = "A high-performance Holographic Memory System (HMS) implementing Vector Symbolic Architectures (VSA)."
repository = "https://github.com/dcondrey/hms"
documentation = "https://docs.rs/hms-core"
keywords = ["vsa", "hdc", "vector-database", "semantic-search", "neuro-symbolic"]
categories = ["algorithms", "data-structures", "science"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2.14", features = ["async", "serde-json"], optional = true }
napi-derive = { version = "2.14", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
crc32fast = "1.3"
lz4_flex = "0.11"
rayon = "1.8"
parking_lot = "0.12"
memmap2 = "0.9"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
fxhash = "0.2"
nalgebra = { version = "0.33", features = ["serde-serialize"] }

[build-dependencies]
napi-build = { version = "2.0", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3"

[[bench]]
name = "hms_benchmark"
harness = false

[features]
default = []
node-api = ["napi", "napi-derive", "tokio", "napi-build"]

[profile.release]
lto = true
strip = true
opt-level = 3
