[package]
name = "holographic-memory"
version = "0.6.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
authors = ["David Condrey <david@writerslogic.com>"]
description = "A high-performance Holographic Memory System (HMS) implementing Vector Symbolic Architectures (VSA)."
repository = "https://github.com/writerslogic/holographic-memory"
homepage = "https://github.com/writerslogic/holographic-memory"
documentation = "https://docs.rs/holographic-memory"
keywords = ["vsa", "hdc", "vector-database", "semantic-search", "neuro-symbolic"]
categories = ["algorithms", "data-structures", "science"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2.14", features = ["async", "serde-json"], optional = true }
napi-derive = { version = "2.14", optional = true }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
ts-rs = { version = "12", features = ["serde-compat"] }
schemars = { version = "0.8", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
crc32fast = "1.3"
lz4_flex = "0.11"
rayon = "1.8"
parking_lot = "0.12"
memmap2 = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
clap = { version = "4.4", features = ["derive"] }
fxhash = "0.2"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
zeroize = { version = "1", features = ["derive"], optional = true }
aes-gcm = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
sha2 = { version = "0.10", optional = true }
coset = { version = "0.4", optional = true }
ciborium = { version = "0.2", optional = true }
bs58 = { version = "0.5", optional = true }
ureq = { version = "3", optional = true }
multibase = { version = "0.9", optional = true }
base64 = { version = "0.22", optional = true }
tempfile = "3"

[build-dependencies]
napi-build = { version = "2.0", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3"

[[bench]]
name = "hms_benchmark"
harness = false

[[example]]
name = "verify_cogmem_sample"
required-features = ["provenance"]

[[example]]
name = "story_memory"
required-features = ["experimental"]

[features]
default = []
node-api = ["napi", "napi-derive", "tokio", "napi-build"]
# Python bindings (pyo3 + maturin). Exposes the quantized-phase substrate. Build
# wheels with `maturin build --features python`; publishing is wired in
# .github/workflows/publish-pypi.yml and dormant until a `py-v*` tag is pushed.
python = ["pyo3", "experimental"]
security = ["ed25519-dalek", "zeroize", "aes-gcm", "argon2", "sha2"]
provenance = ["security", "coset", "ciborium", "bs58", "multibase", "base64"]
provenance-scitt = ["provenance", "ureq"]
# Experimental VSA research modules (block_codes, bloom_memory, cls_memory,
# algebra, ternary, compose, resonator, sparse_autoencoder) and the experiment
# binaries that exercise them. Off by default so they are not part of the
# published public API.
experimental = []

# Experiment harnesses that depend on `experimental` modules. Declared
# explicitly so they only build with `--features experimental`; the remaining
# binaries under src/bin are still auto-discovered.
[[bin]]
name = "hms-benchmark-suite"
required-features = ["experimental"]

[[bin]]
name = "hms-scaling"
required-features = ["experimental"]

[[bin]]
name = "cls-decay"
required-features = ["experimental"]

[[bin]]
name = "cls-structured"
required-features = ["experimental"]

[[bin]]
name = "codebook-recovery-test"
required-features = ["experimental"]

[[bin]]
name = "block-recovery-test"
required-features = ["experimental"]

[[bin]]
name = "diag-recovery"
required-features = ["experimental"]

[[bin]]
name = "similarity-decay"
required-features = ["experimental"]

[profile.release]
lto = true
strip = true
opt-level = 3
